--- a/miso.css
+++ b/miso.css
@@ -8,3 +8,53 @@ main{
     font-size: 30px;
     line-height: 50px;
 }
+a{
+    color: #444444;
+    text-decoration: underline dotted;
+    padding: 10px 40px 40px 60px;
+
+    /*margin: auto;
+    border-bottom: 2px solid lightgray;*/
+}
+footer{
+    margin-top: 20px;
+}
+body{
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+}
+#heading{
+    border-top: 2px solid lightgray;
+    margin-top: 25px;
+    padding-top: 30px;
+}
+#image{
+    background-image: url(images/IMG_7197.jpg);
+    width: 300px;
+    height: 300px;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid black;
+    border-bottom: 4px solid black;
+    
+}
+p{
+    text-align: left;
+    margin-left: 120px;
+    margin-right: 120px;
+}
+h2{
+    text-align: left;
+    margin-left: 120px;
+    margin-right: 120px;
+}
+#sista{
+    border-top: 2px solid lightgray;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
